Removed dependcy on boost

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,3 @@
-#boost          cppalgo        general        opencv         smartptr
-#add_subdirectory( boost )
+#  cppalgo        general        opencv         smartptr
 add_subdirectory( cppalgo )
 add_subdirectory( general )
