prototype fix for issues #64, likely will make the subclass a template specialization of raft::kernel, so making a new branch till I decide which to do, otherwise seems to work, added testcase called allpush which has an assert on the ports to check to see if all the ports have data. This is not deterministic however given dumb luck the ports could potentially all have data every time

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CPP_SRC_FILES
     graphtools.cpp
     kernelcontainer.cpp
     kernel.cpp
+    kernel_all.cpp
     kernelexception.cpp
     kernel_pair_t.cpp
     kernel_wrapper.cpp
