updates to cmake file to fix debug build, fixed unused variable (change in defs.hpp), also update to shm library to change random string library so the build doesn't throw an error with snprintf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,10 @@ include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-faligned-new" HAS_ALIGNED_NEW)
 if (HAS_ALIGNED_NEW)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -faligned-new")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE} -faligned-new")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -faligned-new")
 endif()
-
-##
-# check for Scotch, use if there
-##
-find_package( Scotch )
-option( USESCOTCH "Use Scotch partitioning library" )
+    
+    
 
 option( USEQTHREAD "Use QThread threading library" false )
 find_package( QThreads )
