fixed bug from issue #76

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -53,6 +53,8 @@ set( TESTAPPS allocate
      demangle
      allocate_s_string
      allpush
+     nonTrivialAllocatorPop
+     nonTrivialAllocatorPopExternal
      )
 
 if( BUILDRANDOM )
