mostly finished merging files and code, now just need to make it pass all the unit tests....the real fun begins now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,64 +1,77 @@
+set( CMAKE_INCLUDE_CURRENT_DIR ON )
+list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
-set(CPP_SRC_FILES 
-    affinity.cpp
-    allocate.cpp
-    basicparallel.cpp
-    common.cpp
-    demangle.cpp
-    dynalloc.cpp
-    fifo.cpp
-    graphtools.cpp
-    kernelcontainer.cpp
-    kernel.cpp
-    kernel_all.cpp
-    kernelexception.cpp
-    kernel_pair_t.cpp
-    kernel_wrapper.cpp
-    kpair.cpp
-    leastusedfirst.cpp
-    mapbase.cpp
-    map.cpp
-    mapexception.cpp
-    noparallel.cpp
-    raftmanip.cpp
-    parallelk.cpp
-    parsemap.cpp
-    partition_basic.cpp
-    partition_dummy.cpp
-    partition_scotch.cpp
-    pointer.cpp
-    poolschedule.cpp
-    port.cpp
-    port_info.cpp
-    portexception.cpp
-    portiterator.cpp
-    portmap_t.cpp
-    porttemplate.cpp
-    raftexception.cpp
-    roundrobin.cpp
-    schedule.cpp
-    signal.cpp
-    signaldata.cpp
-    simpleschedule.cpp
-    stdalloc.cpp
-    submap.cpp
-    systemsignalhandler.cpp
-    blocked.cpp
+
+include_directories( ${CMAKE_SOURCE_DIR}/raftinc
+                     ${CMAKE_SCOTCH_INCS}
+                     ${CMAKE_QTHREAD_INCS} )
+
+
+                     
+
+set( CPP_SRC_FILES 
+        affinity.cpp
+        allocate.cpp
+        basicparallel.cpp
+        blocked.cpp
+        common.cpp
+        demangle.cpp
+        dynalloc.cpp
+        fifo.cpp
+        graphtools.cpp
+        kernel_all.cpp
+        kernelcontainer.cpp
+        kernel.cpp
+        kernelexception.cpp
+        kernel_pair_t.cpp
+        kernel_wrapper.cpp
+        kpair.cpp
+        leastusedfirst.cpp
+        mapbase.cpp
+        map.cpp
+        mapexception.cpp
+        noparallel.cpp
+        parallelk.cpp
+        parsemap.cpp
+        partition_basic.cpp
+        partition_dummy.cpp
+        pointer.cpp
+        poolschedule.cpp
+        port.cpp
+        portexception.cpp
+        port_info.cpp
+        portiterator.cpp
+        portmap_t.cpp
+        porttemplate.cpp
+        raftexception.cpp
+        raftmanip.cpp
+        roundrobin.cpp
+        schedule.cpp
+        signal.cpp
+        signaldata.cpp
+        simpleschedule.cpp
+        stdalloc.cpp
+        streamparse.cpp
+        submap.cpp
+        systemsignalhandler.cpp
+        tempmap.cpp
 )
 
-add_library( raft ${CPP_SRC_FILES} )
-target_compile_definitions(raft PRIVATE -DLIBCOMPILE=1 -DRDTSCP=1 )
+add_library( raft 
+                ${CPP_SRC_FILES} )
+
 target_include_directories(raft 
     PUBLIC 
     ${PROJECT_SOURCE_DIR}/raftinc 
     ${PROJECT_SOURCE_DIR}
-    ${CMAKE_SCOTCH_INCS}
     ${CMAKE_QTHREAD_INCS}
 )
 
+target_compile_definitions( raft PRIVATE -DLIBCOMPILE=1 -DRDTSCP=1 )
+
 target_link_libraries( 
                        raft 
-                       ${CMAKE_SCOTCH_LIBS}
+                       ${CMAKE_SCOTCH_LIBS} 
                        ${CMAKE_QTHREAD_LIBS} 
                      )
 
