--- a/examples/general/pi/CMakeLists.txt
+++ b/examples/general/pi/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package( Threads )
 # check for Scotch, use if there
 ##
 find_package( Scotch )
+find_package( NUMA )
 ##
 # c/c++ std
 ##
@@ -42,5 +43,6 @@ target_link_libraries( ${APP}
                        cmdargs
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_THREAD_LIBS_INIT} 
-                       ${CMAKE_RT_LIBS} )
+                       ${CMAKE_RT_LIBS}
+                       ${CMAKE_NUMA_LIBS} )
 
