--- a/examples/opencv/CMakeLists.txt
+++ b/examples/opencv/CMakeLists.txt
@@ -14,10 +14,9 @@ find_package( OpenCV 3 REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 find_package( LIBRT )
-find_package( Scotch )
+find_package( NUMA )
 
 set( APP contours )
-
 add_executable( ${APP} "${APP}.cpp" )
 
 target_link_libraries( ${APP} 
@@ -25,4 +24,7 @@ target_link_libraries( ${APP}
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_RT_LIBS} 
-                       ${OpenCV_LIBS} )
+                       ${OpenCV_LIBS}
+                       shm
+                       ${CMAKE_NUMA_LIBS}
+                       ${CMAKE_QTHREAD_LIBS} )
