adding files from dev branch that were missed and working slowly through all the test cases

--- a/examples/general/CMakeLists.txt
+++ b/examples/general/CMakeLists.txt
@@ -5,9 +5,9 @@ add_subdirectory( pi )
 ##
 # take out if windows since not that many have bzlib installed
 ##
-if( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
-add_subdirectory( rbzip2 )
-endif( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
+#if( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
+#add_subdirectory( rbzip2 )
+#endif( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
 
 add_subdirectory( multiply )
 add_subdirectory( readfile )
