Add description string to new cmake parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,13 +50,13 @@ add_subdirectory( src )
 add_subdirectory( raftinc )
 
 mark_as_advanced( BUILD_EXAMPLES )
-set( BUILD_EXAMPLES true CACHE BOOL )
+set( BUILD_EXAMPLES true CACHE BOOL "Examples are built if true" )
 if( BUILD_EXAMPLES )
     add_subdirectory( examples )
 endif( BUILD_EXAMPLES )
 
 mark_as_advanced( BUILD_BENCHMARKS )
-set( BUILD_BENCHMARKS true CACHE BOOL )
+set( BUILD_BENCHMARKS true CACHE BOOL "Benchmarks are built if true" )
 if( BUILD_BENCHMARKS )
     add_subdirectory( benchmarks )
 endif( BUILD_BENCHMARKS )
@@ -70,7 +70,7 @@ endif( BUILD_WOPENCV )
 # Set up unit tests
 ##
 mark_as_advanced( BUILD_TESTS )
-set( BUILD_TESTS true CACHE BOOL )
+set( BUILD_TESTS true CACHE BOOL "Tests build target available if true" )
 if( BUILD_TESTS )
     enable_testing()
     add_subdirectory( testsuite )
