updated a few of the CMakeList preferences for build options, only test cases are build by default, examples are optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,18 +50,19 @@ add_subdirectory( src )
 add_subdirectory( raftinc )
 
 mark_as_advanced( BUILD_EXAMPLES )
-set( BUILD_EXAMPLES true CACHE BOOL "Examples are built if true" )
+set( BUILD_EXAMPLES false CACHE BOOL "Examples are built if true" )
 if( BUILD_EXAMPLES )
     add_subdirectory( examples )
 endif( BUILD_EXAMPLES )
 
 mark_as_advanced( BUILD_BENCHMARKS )
-set( BUILD_BENCHMARKS true CACHE BOOL "Benchmarks are built if true" )
+set( BUILD_BENCHMARKS false CACHE BOOL "Benchmarks are built if true" )
 if( BUILD_BENCHMARKS )
     add_subdirectory( benchmarks )
 endif( BUILD_BENCHMARKS )
 
-mark_as_advanced( BUILD_WOPENCV false )
+mark_as_advanced( BUILD_WOPENCV )
+set( BUILD_BENCHMARKS false CACHE BOOL "Build OpenCV Examples if true" ) 
 if( BUILD_WOPENCV )
     add_subdirectory( examples/opencv )
 endif( BUILD_WOPENCV )
