incremental updates, brought back the kernel_wrapper vs. shared pointer, added a few in-line debugging helpers, will remove shortly....bug on the LHS was the shared_ptr count going to zero, will fix

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set( CPP_SRC_FILES
         kernel.cpp
         kernelexception.cpp
         kernel_pair_t.cpp
+        kernel_wrapper.cpp
         leastusedfirst.cpp
         mapbase.cpp
         map.cpp
