updates, added testcase for issue #86, opened issue #84 and issue #85 based on print.tcc review, opened #87 based on reviewing test cases. This testcase, splitop.tcc fails somewhere in the parser, with error of port exception. Opened issue #88

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -72,6 +72,7 @@ set( TESTAPPS
     prefetchEffective
 #    sequential
     splitchain
+    splitop
 ## runs, test fails 
 #    splitchainRetStruct
     split
