--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "git-dep/shm"]
 	path = git-dep/shm
 	url = https://github.com/RaftLib/shm.git
+[submodule "git-dep/affinity"]
+	path = git-dep/affinity
+	url = https://github.com/RaftLib/affinity.git
+[submodule "git-dep/demangle"]
+	path = git-dep/demangle
+	url = https://github.com/RaftLib/demangle.git
