affinitylibfix initial work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
 project(RaftLib)
-set( version 0.7a )
+set( version 0.9a )
 set( CMAKE_INCLUDE_CURRENT_DIR ON )
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
 
@@ -46,8 +46,9 @@ add_definitions( "-DL1D_CACHE_LINE_SIZE=${L1D_LINE_SIZE}" )
 
 
 ##
-# get pkg-config for install
+# get pkg-config for install - for unix/linux/mac only 
 ##
+if( NOT WIN32 )
 mark_as_advanced( PKG_CONFIG_PATHWAY )
 set( PKG_CONFIG_PATH "" CACHE STRING "Set the pkg-config path, othwerwise will figure out" )
 if( NOT PKG_CONFIG_PATH )
@@ -58,6 +59,8 @@ execute_process( COMMAND  pkg-config --variable pc_path pkg-config
 set( PKG_CONFIG_PATH ${LOCAL_PKG_CONFIG_PATHWAY} )
 endif()
 message( STATUS "Setting PKG_CONFIG_PATH to: ${PKG_CONFIG_PATH}" )
+endif( NOT WIN32 )
+
 
 include( CheckGitDep )
 
@@ -101,17 +104,20 @@ foreach( HFILE ${MAINHEADERS} )
 endforeach( HFILE ${MAINHEADERS} )
 
 ##
-# setup pkg-config files
+# setup pkg-config files - for linux/unix/os x
 ##
-if( NOT ${USEQTHREAD} )
+if( NOT WIN32 )
+
+if( NOT ${USEQTHREAD} ) 
 install( CODE "file( COPY  ${CMAKE_CURRENT_SOURCE_DIR}/raftlib.pc
                      DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )" )
 else()
 install( CODE "file( COPY  ${CMAKE_CURRENT_SOURCE_DIR}/raftlib.pc-qthreads
                      DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )" )
 install( CODE "file( RENAME ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc-qthreads ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc )" )                     
-endif()
+endif( NOT ${USEQTHREAD} )
 
 
 install( CODE "file( COPY  ${CMAKE_CURRENT_BINARY_DIR}/raftlib.pc
                      DESTINATION ${PKG_CONFIG_PATH} )" )
+endif( NOT WIN32 )                     
