yet more updates, running one more check then will get back to reviewing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,7 @@ target_link_libraries(
                        ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_QTHREAD_LIBS} 
                        demangle
+                       affinity
                      )
 
 
