--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -66,7 +66,11 @@ endif( BUILDRANDOM )
 
 foreach( APP ${TESTAPPS} )
  add_executable( ${APP} "${APP}.cpp" )
- target_link_libraries( ${APP} raft  ${CMAKE_THREAD_LIBS_INIT} 
+ target_link_libraries( ${APP}  
+                                     raft
+                                     demangle
+                                     affinity
+                                     ${CMAKE_THREAD_LIBS_INIT} 
                                      ${CMAKE_SCOTCH_LIBS}
                                      ${CMAKE_RT_LIBS} 
                                      ${CMAKE_QTHREAD_LIBS}
