--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
@@ -12,27 +10,23 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  buildAndTest:
-    # The type of runner that the job will run on
+  Windows:
     runs-on: windows-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: 'Run CMake with Ninja'
+    - name: 'Run CMake with VS16'
       uses: lukka/run-cmake@v2
       with:
         cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
         cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
         buildDirectory: "${{ github.workspace }}/../../_temp"
         buildWithCMake: true
-        cmakeBuildType: Debug 
+        cmakeBuildType: Release 
         cmakeGenerator: VS16Win64 
         
     - name: 'Run CTest'
-      run: ctest -C Debug
+      run: ctest -C Release
       working-directory: "${{ github.workspace }}/../../_temp"
         
