--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,30 @@ jobs:
         cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
         cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
         buildDirectory: "${{ github.workspace }}/../../_temp"
+        cmakeBuildType: Release   
         buildWithCMake: true
         cmakeGenerator: VS16Win64 
         buildWithCMakeArgs: --config Release  
         
     - name: 'Run CTest'
       run: ctest -C Release
-      working-directory: "${{ github.workspace }}/../../_temp"
+      working-directory: "${{ github.workspace }}/../../_temp/windows"
+  Linux:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      
+    - name: 'Run CMake'
+      uses: lukka/run-cmake@v2
+      with:
+        cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+        cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+        cmakeBuildType: Release  
+        buildDirectory: "${{ github.workspace }}/../../_temp"
+        buildWithCMake: true
+        buildWithCMakeArgs: --config Release  
+        
+    - name: 'Run CTest'
+      run: ctest -C Release
+      working-directory: "${{ github.workspace }}/../../_temp/linux"
         
