--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
     - name: 'Run CTest'
       run: ctest -C Release
       working-directory: "${{ github.workspace }}/../../_temp/windows"
+  
   Linux:
     runs-on: ubuntu-latest
     steps:
@@ -48,4 +49,23 @@ jobs:
     - name: 'Run CTest'
       run: ctest -C Release
       working-directory: "${{ github.workspace }}/../../_temp/linux"
+  
+  MacOS:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+      
+    - name: 'Run CMake'
+      uses: lukka/run-cmake@v2
+      with:
+        cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+        cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+        cmakeBuildType: Release  
+        buildDirectory: "${{ github.workspace }}/../../_temp/macos"
+        buildWithCMake: true
+        buildWithCMakeArgs: --config Release  
+        
+    - name: 'Run CTest'
+      run: ctest -C Release
+      working-directory: "${{ github.workspace }}/../../_temp/macos"
         
