one test case failure still in nonTrivialAllocatorPopExternal_test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,13 @@ set( HELPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/helpers )
 ##
 # helper exec to get the L1 cache size from Linux/OS X/Win
 ##
-execute_process( COMMAND ${CMAKE_CXX_COMPILER} ${HELPER_DIR}/cacheinfo.cpp -o ${HELPER_DIR}/cacheinfo)
+if( APPLE )
+set( HELPER_COMPILER clang++ )
+else()
+set( HELPER_COMPILER ${CMAKE_CXX_COMPILER} )
+endif() 
+
+execute_process( COMMAND ${HELPER_COMPILER} ${HELPER_DIR}/cacheinfo.cpp -o ${HELPER_DIR}/cacheinfo)
 execute_process( COMMAND ${HELPER_DIR}/cacheinfo 
                  COMMAND tr -d '\n' 
                  OUTPUT_VARIABLE L1D_LINE_SIZE )
