--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -57,6 +57,7 @@ set( TESTAPPS allocate
      allpush
      nonTrivialAllocatorPop
      nonTrivialAllocatorPopExternal
+     vectorAlloc
      )
 
 if( BUILDRANDOM )
