update to add strings on ports for issue #71, closing issue once merged and will add comment, strings are fully supported on ports. Need to add much longer strings to test different allocation schemes.

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -58,6 +58,7 @@ set( TESTAPPS allocate
      nonTrivialAllocatorPop
      nonTrivialAllocatorPopExternal
      vectorAlloc
+     stringAlloc
      )
 
 if( BUILDRANDOM )
